RESOLVED FIXED123035
Unable to upload <img src="foo.svg"> as WebGL texture
https://bugs.webkit.org/show_bug.cgi?id=123035
Summary Unable to upload <img src="foo.svg"> as WebGL texture
Dean Jackson
Reported 2013-10-18 13:18:53 PDT
You can't use texture2D with an HTMLImageElement if that image is pointing to an SVG resource. <rdar://problem/15247691>
Attachments
Patch (14.95 KB, patch)
2013-10-18 13:29 PDT, Dean Jackson
thorton: review+
Dean Jackson
Comment 1 2013-10-18 13:29:03 PDT
Tim Horton
Comment 2 2013-10-18 13:41:32 PDT
Comment on attachment 214599 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=214599&action=review > Source/WebCore/ChangeLog:10 > + Note that the SVG image still needs to have an intrinsic s/intrinsic/explicit/? > Source/WebCore/html/canvas/WebGLRenderingContext.cpp:3829 > + IntRect destRect(0, 0, size.width(), size.height()); destRect(IntPoint(), size)?
Dean Jackson
Comment 3 2013-10-18 13:55:33 PDT
Dean Jackson
Comment 4 2013-10-18 13:58:04 PDT
CC Ken in case Chrome doesn't already do this.
Philip Rogers
Comment 5 2013-10-18 14:37:08 PDT
(In reply to comment #4) > CC Ken in case Chrome doesn't already do this. On it :) http://crbug.com/309161
Note You need to log in before you can comment on or make changes to this bug.